# fin-rag

./: .env.example  .gitignore  README.md  api_endpoints_design.md  backend_architecture_design.md  engineering_design_document.md  implementation_milestones.md  phase_1_development_blueprint.md  project_structure_design.md  pyproject.toml  ruff.toml  system_architecture_design.md
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnswerViewer.tsx  BoundingBoxOverlay.tsx  CitationCard.tsx  CitationPanel.tsx  DocumentNavigator.tsx  PDFViewer.tsx
src/finrag/: main.py
src/finrag/agent/: __init__.py  anthropic_client.py  base.py  openai_client.py  orchestrator.py  verification.py
src/finrag/api/: dependencies.py
src/finrag/chunker/: __init__.py  base.py  financial.py
src/finrag/citation_engine/: __init__.py  citation_models.py  coordinate_store.py  highlighter.py  mapper.py  pdf_renderer.py
src/finrag/core/: config.py  exceptions.py  logging.py  security.py
src/finrag/db/: __init__.py  base.py  chunk_repository.py  session.py  (+1 more)
stitch_assets/: 2_Research_Workspace.html  3_Dashboard.html  4_Documents.html  5_Compare_Reports.html  6_Verification_Center.html  7_Processing_Pipeline.html  8_Analytics_Dashboard.html  9_Exports_Settings.html
tests/: conftest.py
tests/unit/: test_api_ingest.py  test_chunker.py  test_citation_engine.py  test_export.py  test_indexer.py  test_main.py  test_parser.py  test_query_api.py  test_retrieval.py  test_vector_client.py  test_verification.py  test_viewer_api.py
(+28 files in other folders)
