[tool.poetry]
name = "finrag"
version = "0.1.0"
description = "Institutional-grade Financial RAG Platform"
authors = ["AI Engineering Team <info@finrag.institutional.internal>"]
readme = "README.md"
packages = [{include = "finrag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.6"
python-multipart = "^0.0.9"
structlog = "^24.2.0"
colorama = "^0.4.6"
h11 = "^0.14.0"
pdfplumber = "^0.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
mypy = "^1.10.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["migrations"]
